--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,3 +5,9 @@ en:
   stats: 'Stats'
   introduction: 'Introduction'
   all_rights_reserved: 'All Rights Reserved'
+  name: 'Name'
+  email: 'Email'
+  subject: 'Subject'
+  message: 'Message'
+  more_information: 'More Information'
+  i_want_more_info: 'I want more info about next actions'
