--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,7 @@ en:
   home: 'Home'
   send_message: 'Send Message'
   integration: 'Integration'
-  stats: 'Stats'
+  stats: 'Statistics'
   introduction: 'Introduction'
   all_rights_reserved: 'All Rights Reserved'
   name: 'Name'
@@ -11,3 +11,9 @@ en:
   message: 'Message'
   more_information: 'More Information'
   i_want_more_info: 'I want more info about next actions'
+  check_the_red_fields: 'Check the red fields'
+  you_cant_send_more_messages: 'You can not send more messages'
+  follow_instructions_that_we_send_to_your_email_check_spam_folder: 'Follow the instructions that we send you to your email, check spam folder'
+  your_message_will_be_sent: 'Your message will be sent'
+  integrate_the_form_in_your_website: 'Integrate the form in your website'
+  fill_the_form: 'Fill the form'
