mejorando el interfaz en francés

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,3 +17,4 @@ en:
   your_message_will_be_sent: 'Your message will be sent'
   integrate_the_form_in_your_website: 'Integrate the form in your website'
   fill_the_form: 'Fill the form'
+  developed_by: 'Developed by'
