--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -17,6 +17,7 @@ es:
   your_message_will_be_sent: 'Tu mensaje va a ser enviado'
   integrate_the_form_in_your_website: 'Integra el formulario en tu sitio web'
   fill_the_form: 'Rellena el formulario'
+  developed_by: 'Desarrollado por'
 
   mailman:
     send_activation_code:
