--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -25,6 +25,7 @@ fr:
   integrate_the_form_in_your_website: "Intégrer la forme dans votre site Web"
   fill_the_form: "Remplissez le formulaire"
   developed_by: "Développé par"
+  your_country: 'Votre Pays'
 
   date:
     formats:
