corrección de locales realizadas por quique

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,15 +1,15 @@
 es:
   home: 'Inicio'
-  send_message: 'Enviar Mensaje'
+  send_message: 'Enviar mensaje'
   integration: 'Integración'
   stats: 'Estadísticas'
   introduction: 'Introducción'
-  all_rights_reserved: 'Todos los Derechos Reservados'
+  all_rights_reserved: 'Todos los derechos reservados'
   name: 'Nombre'
-  email: 'Email'
+  email: 'E-mail'
   subject: 'Asunto'
   message: 'Mensaje'
-  more_information: 'Más Información'
+  more_information: 'Más información'
   i_want_more_info: 'Quiero recibir más información de futuras acciones'
   check_the_red_fields: 'Verifica los campos en rojo'
   you_cant_send_more_messages: 'No puedes enviar más mensajes'
