--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,3 +19,5 @@ en:
   fill_the_form: 'Fill the form'
   developed_by: 'Developed by'
   your_country: 'Your Country'
+  licensed_under: 'Licensed under'
+  git_repo: 'Git Repository'
