web interface translated to greek

--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -1,23 +1,23 @@
 gr:
-  home: 'Home'
-  send_message: 'Send Message'
-  integration: 'Integration'
-  stats: 'Statistics'
-  introduction: 'Introduction'
-  all_rights_reserved: 'All Rights Reserved'
-  name: 'Name'
-  email: 'Email'
-  subject: 'Subject'
-  message: 'Message'
-  more_information: 'More Information'
-  i_want_more_info: 'I want more info about next actions'
-  check_the_red_fields: 'Check the red fields'
-  you_cant_send_more_messages: 'You can not send more messages'
-  follow_instructions_that_we_send_to_your_email_check_spam_folder: 'Follow the instructions that we send you to your email, check spam folder'
-  your_message_will_be_sent: 'Your message will be sent'
-  integrate_the_form_in_your_website: 'Integrate the form in your website'
-  fill_the_form: 'Fill the form'
-  developed_by: 'Developed by'
-  your_country: 'Your Country'
-  licensed_under: 'Licensed under'
+  home: 'Κεντρική σελίδα'
+  send_message: 'Αποστολή μηνύματος'
+  integration: 'Ενσωμάτωση'
+  stats: 'Στατιστικά'
+  introduction: 'Πρόλογος'
+  all_rights_reserved: 'Με επιφύλαξη κάθε νόμιμου δικαιώματος'
+  name: 'Όνομα'
+  email: 'Ηλεκτρονικό ταχυδρομείο'
+  subject: 'Θέμα'
+  message: 'Μήνυμα'
+  more_information: 'Περισσότερες πληροφορίες'
+  i_want_more_info: 'Ενδιαφέρομαι για ενημέρωση περί μελλοντικών δράσεων'
+  check_the_red_fields: 'Σημειώστε τα πεδία σε κόκκινο'
+  you_cant_send_more_messages: 'Δεν μπορείτε να στείλετε περισσότερα μηνύματα'
+  follow_instructions_that_we_send_to_your_email_check_spam_folder: 'Ακολουθήστε τις οδηγείες που στείλαμε στη διεύθυνσή σας, ελέξτε τον φάκελο spam'
+  your_message_will_be_sent: 'Το μήνυμά σας θα αποσταλλεί'
+  integrate_the_form_in_your_website: 'Ενσωματώστε αυτή την φόρμα στην ιστοσελίδα σας'
+  fill_the_form: 'Συμπληρώστε την φόρμα'
+  developed_by: 'Αναπτύχθηκε από'
+  your_country: 'Η χώρα σας'
+  licensed_under: 'Υπό την άδεια'
   git_repo: 'Git Repository'
