mail inválido en griego

--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -35,4 +35,6 @@ gr:
               blank: "όχι κενό"
             body:
               blank: "όχι κενό"
+            email:
+              invalid: "άκυρο"
                 
