corregido tipo en traducción a griego

--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -36,5 +36,5 @@ gr:
             body:
               blank: "όχι κενό"
             email:
-              invalid: "άκυρο"
+              invalid: "Άκυρο"
                 
