--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,7 @@ en:
   your_country: 'Your Country'
   licensed_under: 'Licensed under'
   git_repo: 'Git Repository'
+  
+  mailman:
+    send_activation_code:
+      subject: 'Confirma tu mensaje para los miembros del Parlamento Europeo'
