--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -25,4 +25,4 @@ of check spammappe'
   
   mailman:
     send_activation_code:
-      subject: 'Confirma tu mensaje para los miembros del Parlamento Europeo'
+      subject: 'Agree to send the message to the members of the European Parliament'
