--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -24,7 +24,7 @@ gr:
   
   mailman:
     send_activation_code:
-      subject: 'Confirma tu mensaje para los miembros del Parlamento Europeo'
+      subject: 'Agree to send the message to the members of the European Parliament'
 
   activerecord:
     errors:
