--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -24,4 +24,4 @@ de:
   
   mailman:
     send_activation_code:
-      subject: 'Confirm your message for the members of the Europen Parliament'
+      subject: 'Bestätigen Sie Ihre Nachricht an die Mitglieder des Europäischen Parlaments'
