cambio de frase al validar un mensaje

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -14,7 +14,7 @@ es:
   check_the_red_fields: 'Verifica los campos en rojo'
   you_cant_send_more_messages: 'No puedes enviar más mensajes'
   follow_instructions_that_we_send_to_your_email_check_spam_folder: 'Sigue la instrucciones que te hemos enviado por correo, revisa la carpeta de spam'
-  your_message_will_be_sent: 'Tu mensaje va a ser enviado'
+  your_message_will_be_sent: 'Su mensaje ya ha sido enviado'
   integrate_the_form_in_your_website: 'Integra el formulario en tu sitio web'
   fill_the_form: 'Rellena el formulario'
   developed_by: 'Desarrollado por'
