--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,7 +14,7 @@ en:
   check_the_red_fields: 'Check the red fields'
   you_cant_send_more_messages: 'You can not send more messages'
   follow_instructions_that_we_send_to_your_email_check_spam_folder: 'Follow the instructions that we send you to your email, check spam folder'
-  your_message_will_be_sent: 'Your message will be sent'
+  your_message_will_be_sent: 'Your message has been sent'
   integrate_the_form_in_your_website: 'Integrate the form in your website'
   fill_the_form: 'Fill the form'
   developed_by: 'Developed by'
