más traducciones correctas

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -21,7 +21,7 @@ fr:
   check_the_red_fields: "Vérifiez les champs en rouge"
   you_cant_send_more_messages: "Vous ne pouvez pas envoyer plus de messages"
   follow_instructions_that_we_send_to_your_email_check_spam_folder: "Suivez les instructions que nous vous envoyons à votre e-mail, vérifiez le dossier spam"
-  your_message_will_be_sent: "Votre message sera envoyé"
+  your_message_will_be_sent: "Ton message a été envoyé"
   integrate_the_form_in_your_website: "Intégrer le formulaire dans votre site Web"
   fill_the_form: "Remplissez le formulaire"
   developed_by: "Développé par"
