traducción de una frase al danés

--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -15,7 +15,7 @@ da:
   you_cant_send_more_messages: 'Du kan ikke sende flere beskeder'
   follow_instructions_that_we_send_to_your_email_check_spam_folder: 'Følg vejledningen, vi sender dig til din e-mail,
 of check spammappe'
-  your_message_will_be_sent: 'Din besked vil blive sendt'
+  your_message_will_be_sent: 'Din besked er blevet sendt'
   integrate_the_form_in_your_website: 'Integrere formularen i dit website'
   fill_the_form: 'Udfyld formularen'
   developed_by: 'Udviklet af'
