--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,7 +2,7 @@ de:
   home: 'Home'
   send_message: 'Nachricht senden'
   integration: 'Integration'
-  statistics: 'Statistik'
+  stats: 'Statistik'
   introduction: 'Einleitung'
   all_rights_reserved: 'Alle Rechte vorbehaltend'
   name: 'Name'
