Rewrite the main page to make it crystal clear

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,7 @@ en:
   send_message: 'Send Message'
   integration: 'Integration'
   stats: 'Statistics'
-  introduction: 'Introduction'
+  introduction: 'Urgent action'
   all_rights_reserved: 'All Rights Reserved'
   name: 'Name'
   email: 'Email'
