--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -3,7 +3,7 @@ es:
   send_message: 'Enviar mensaje'
   integration: 'Integración'
   stats: 'Estadísticas'
-  introduction: 'Introducción'
+  introduction: 'Acción urgente'
   all_rights_reserved: 'Todos los derechos reservados'
   name: 'Nombre'
   email: 'E-mail'
