--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -10,7 +10,7 @@ fr:
   send_message: 'Envoyer un message'
   integration: 'Intégration'
   stats: 'Statistiques'
-  introduction: 'Introduction'
+  introduction: 'Action urgente'
   all_rights_reserved: 'Tous les droits réservés'
   name: 'Nom'
   email: 'Email'
