añadida clave nueva a las locales

--- a/config/locales/cat.yml
+++ b/config/locales/cat.yml
@@ -21,6 +21,7 @@ cat:
   your_country: 'El teu País'
   licensed_under: 'Llicenciat sota'
   git_repo: 'Repositori Git'
+  we_did_not_find_the_message_with_that_activation_code: "No encontramos el mensaje con ese código de confirmación. ¿Quizá el mensaje ya fué confirmado?."
   
   mailman:
     send_activation_code:
