--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -21,6 +21,7 @@ es:
   your_country: 'Tu país'
   licensed_under: 'Licenciado bajo'
   git_repo: 'Repositorio Git'
+  we_did_not_find_the_message_with_that_activation_code: "No encontramos el mensaje con ese código de confirmación. ¿Quizá el mensaje ya fué confirmado?."
 
   mailman:
     send_activation_code:
