--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -28,6 +28,7 @@ fr:
   your_country: 'Votre Pays'
   licensed_under: 'Sous License'
   git_repo: 'Référentiel Git'
+  we_did_not_find_the_message_with_that_activation_code: "No message found matching that confirmation code. Maybe the message was already confirmed?"
   
   mailman:
     send_activation_code:
