--- a/config/locales/gl.yml
+++ b/config/locales/gl.yml
@@ -21,6 +21,7 @@ gl:
   your_country: 'O teu País'
   licensed_under: 'Licenciado baixo'
   git_repo: 'Repositorio Git'
+  we_did_not_find_the_message_with_that_activation_code: "No encontramos el mensaje con ese código de confirmación. ¿Quizá el mensaje ya fué confirmado?."
 
   mailman:
     send_activation_code:
