--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -21,6 +21,7 @@ gr:
   your_country: 'Η χώρα σας'
   licensed_under: 'Υπό την άδεια'
   git_repo: 'Git Repository'
+  we_did_not_find_the_message_with_that_activation_code: "No message found matching that confirmation code. Maybe the message was already confirmed?"
   
   mailman:
     send_activation_code:
