--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -21,6 +21,7 @@ it:
   your_country: 'Il tuo Paese'
   licensed_under: 'Distribuito sotto licenza'
   git_repo: 'Repository git'
+  we_did_not_find_the_message_with_that_activation_code: "No message found matching that confirmation code. Maybe the message was already confirmed?"
   
   mailman:
     send_activation_code:
