--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -21,6 +21,7 @@ pl:
   your_country: 'Twój kraj'
   licensed_under: 'Na licencji'
   git_repo: 'Repozytorium Git'
+  we_did_not_find_the_message_with_that_activation_code: "No message found matching that confirmation code. Maybe the message was already confirmed?"
   
   mailman:
     send_activation_code:
