--- a/config/locales/gl.yml
+++ b/config/locales/gl.yml
@@ -3,7 +3,7 @@ gl:
   send_message: 'Enviar mensaxe'
   integration: 'Integración'
   stats: 'Estadísticas'
-  introduction: 'Introducción'
+  introduction: 'Acción urxente'
   all_rights_reserved: 'Todos os dereitos reservados'
   name: 'Nome'
   email: 'E-mail'
