--- a/config/locales/gr.yml
+++ b/config/locales/gr.yml
@@ -13,7 +13,7 @@ gr:
   i_want_more_info: 'Ενδιαφέρομαι για ενημέρωση περί μελλοντικών δράσεων'
   check_the_red_fields: 'Σημειώστε τα πεδία σε κόκκινο'
   you_cant_send_more_messages: 'Δεν μπορείτε να στείλετε περισσότερα μηνύματα'
-  follow_instructions_that_we_send_to_your_email_check_spam_folder: 'Ακολουθήστε τις οδηγείες που στείλαμε στη διεύθυνσή σας, ελέξτε τον φάκελο spam'
+  follow_instructions_that_we_send_to_your_email_check_spam_folder: "Η αποστολή αναμένει επιβεβαίωση. Για να σταλεί το μήνυμά σας, πρέπει να το επιβεβαιώσετε ακολουθόντας τις οδηγίες που σας έχουμε στείλει (αν δεν τις βλέπετε, ελέξτε τον φάκελο spam!). Παρακαλώ λάβετε υπ'οψιν ότι το μήνυμα δεν θα αποσταλεί μέχρι την επιβεβαίωση!!"
   your_message_will_be_sent: 'Το μήνυμά σας θα αποσταλλεί'
   integrate_the_form_in_your_website: 'Ενσωματώστε αυτή την φόρμα στην ιστοσελίδα σας'
   fill_the_form: 'Συμπληρώστε την φόρμα'
